--- a/configs/sys.conf
+++ b/configs/sys.conf
@@ -1,5 +1,5 @@
 _conf_cut_dict = "{config_root_path}/dict/jieb_dict/cut_dict"
 _conf_entity_list = "{config_root_path}/dict/entity_list"
-_conf_tree_file = "{config_root_path}/query.txt"
+_conf_tree_file = "{config_root_path}/tree.conf"
 _conf_retriver_file = "{config_root_path}/retriver/retriver.conf"
 _conf_rerank_file = "{config_root_path}/reranker/rerank.conf"
